[package]
name = "tls-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "io-util", "time", "macros", "sync","signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
radix_trie = "0.3.0"
parking_lot = "0.12"
num_cpus = "1.17.0"
socket2 = "0.6.1"
httparse = "1.9"
rand = { version = "0.9.2", features = ["small_rng"] }
smallvec = "1.15.1"
tokio-util = "0.7.17"

[dev-dependencies]
tempfile = "3.10"

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false