[package]
name = "tls-proxy"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
httparse = "1"
memchr = "2"
num_cpus = "1"
parking_lot = "0.12"
radix_trie = "0.3.0"
rand = "0.9"
smallvec = "1"
socket2 = { version = "0.6.1", features = ["all"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true